fixed guest list layout issue

--- a/src/app/components/finish/finish.component.css
+++ b/src/app/components/finish/finish.component.css
@@ -142,11 +142,13 @@
 }
 
 ul {
-    list-style: none
+    list-style: none;
+    padding-left: 30px;
+    padding-right: 30px;
 }
 
 hr {
-    margin-right: 30px;
+    /*margin-right: 30px;*/
 }
 p {
     color: #305468;
