--- a/src/app/components/transactionclosed/transaction-closed.component.css
+++ b/src/app/components/transactionclosed/transaction-closed.component.css
@@ -142,12 +142,15 @@
 }
 
 ul {
-    list-style: none
+    list-style: none;
+    padding-left: 30px;
+    padding-right: 30px;
 }
 
 hr {
-    margin-right: 30px;
+    /*margin-right: 30px;*/
 }
+
 p {
     color: #305468;
 }
